Fixed overlap on map buttons

--- a/styles.css
+++ b/styles.css
@@ -207,4 +207,5 @@ a.article:hover {
 #mapid {
     width: 100%;
     height: 600px;
+    z-index: -2;
 }
